--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 <body ng-app="myApp" ng-controller="mainController" ng-cloak>
     <h4>Drop it and Draw</h4>
     <h5>A website by Liel and Avia</h5>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
+    <script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script>
+    <script>
 var myApp = angular.module('myApp',[]);
 
 myApp.controller('mainController', ['$scope', function($scope) {
 }]);
-</script>
+    </script>
 </body>
 </html>
