--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
-<META HTTP-EQUIV="EXPIRES" CONTENT="Mon, 22 Jul 2002 11:12:01 GMT">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></link>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="" />
+    <meta name="author" content="Ari Hershowitz" />
+    <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
+    <meta http-equiv="EXPIRES" content="Mon, 22 Jul 2002 11:12:01 GMT">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="static/css/libs/blueimp-gallery.min.css">
 <style>
     body{
       text-align:center;
@@ -16,15 +22,46 @@
 <body ng-app="myApp" ng-controller="mainController" ng-cloak>
     <h1>Drop it and Draw</h1>
     <h2>A website by Liel and Avia</h2>
-    <script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- The Gallery as inline carousel, can be positioned anywhere on the page -->
+    <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
+        <div class="slides"></div>
+        <h3 class="title"></h3>
+        <a class="prev">‹</a>
+        <a class="next">›</a>
+        <a class="play-pause"></a>
+        <ol class="indicator"></ol>
+    </div>
+    <script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="static/js/libs/blueimp-gallery.min.js"></script>
     <script>
-var myApp = angular.module('myApp',[]);
-
-myApp.controller('mainController', ['$scope', function($scope) {
+        var myApp = angular.module('myApp',[]);
+        myApp.controller('mainController', ['$scope', function($scope) {
 }]);
+    </script>
+    <script>
+        $(function(){
+        var options = {
+                container: '#blueimp-gallery-carousel',
+                carousel: true,
+                enableKeyboardNavigation: true
+                };
+        var gallery = blueimp.Gallery([
+        {
+        title: 'Balloons',
+        href: 'static/img/balloons_med.jpg',
+        type: 'image/jpeg',
+        thumbnail: 'static/img/thumbnails/balloons_sm.jpg'
+        },
+        {
+        title: 'Hands',
+        href: 'static/img/hands_med.jpg',
+        type: 'image/jpeg',
+        thumbnail: 'static/img/thumbnails/hands_sm.jpg'
+        }
+        ], options );
+        });
     </script>
 </body>
 </html>
