--- a/index.html
+++ b/index.html
@@ -59,6 +59,24 @@
         href: 'static/img/hands_med.jpg',
         type: 'image/jpeg',
         thumbnail: 'static/img/thumbnails/hands_sm.jpg'
+        },
+        {
+        title: 'Seal',
+        href: 'static/img/seal_med.jpg',
+        type: 'image/jpeg',
+        thumbnail: 'static/img/thumbnails/seal_sm.jpg'
+        },
+        {
+        title: 'Halloween-1',
+        href: 'static/img/halloween1_med.jpg',
+        type: 'image/jpeg',
+        thumbnail: 'static/img/thumbnails/halloween1_sm.jpg'
+        },
+        {
+        title: 'Halloween-2',
+        href: 'static/img/halloween2_med.jpg',
+        type: 'image/jpeg',
+        thumbnail: 'static/img/thumbnails/halloween2_sm.jpg'
         }
         ], options );
         });
