--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="navbar-right pull-right">
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Your&#160Page <span class="sr-only">(current)</span></a></li>
+                        <li class="active"><a href="#">Create&#160;Your&#160Page <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Sign in</a></li>
                     </ul>
                 </div>
