--- a/scramble.html
+++ b/scramble.html
@@ -23,7 +23,7 @@
     <body ng-app="myApp" ng-controller="mainController" ng-cloak>
         <div class="navbar">
             <h3>Word Scramble</h3>
-            <h3>Enter your words below and click 'scramble'. (Max length = 10)</h3>
+            <h3>Enter your words below and click 'scramble'. (Up to 10 letters each)</h3>
         </div>
         <button ng-click="makeScramble()" class="btn btn-primary">
             Scramble 
