--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body ng-app="myApp" ng-controller="mainController" ng-cloak>
         <div class="navbar">
             <h1>Drop it and Draw</h1>
-            <h2>A website by Liel, Avia and Ella</h2>
+            <h2>A website by Liel, Avia, Ella and Yvonne</h2>
             <div class="navbar-right pull-right">
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
@@ -96,6 +96,36 @@
             href: 'static/img/halloween2_med.jpg',
             type: 'image/jpeg',
             thumbnail: 'static/img/thumbnails/halloween2_sm.jpg'
+            },
+            {
+            title: 'YStory-1',
+            href: 'static/img/YStory/Y1.jpg',
+            type: 'image/jpeg',
+            thumbnail: 'static/img/thumbnails/Y1_sm.jpg'
+            },
+            {
+            title: 'YStory-2',
+            href: 'static/img/YStory/Y2.jpg',
+            type: 'image/jpeg',
+            thumbnail: 'static/img/thumbnails/Y2_sm.jpg'
+            },
+            {
+            title: 'YStory-3',
+            href: 'static/img/YStory/Y3.jpg',
+            type: 'image/jpeg',
+            thumbnail: 'static/img/thumbnails/Y3_sm.jpg'
+            },
+            {
+            title: 'YStory-4',
+            href: 'static/img/YStory/Y4.jpg',
+            type: 'image/jpeg',
+            thumbnail: 'static/img/thumbnails/Y4_sm.jpg'
+            },
+            {
+            title: 'YStory-5',
+            href: 'static/img/YStory/Y5.jpg',
+            type: 'image/jpeg',
+            thumbnail: 'static/img/thumbnails/Y5_sm.jpg'
             }
             ], options );
             });
